--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,10 @@
   <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
 
+{% block conteudo %}
+{% endblock %}
+
+
 <h3>&copy 2019 Paulo Côto</h3>
 </body>
 </html>
