--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,16 +11,16 @@
 <body>
 
 <div class="navbar">
-  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+  <a class="active" href="/"><i class="fa fa-fw fa-home"></i> Home</a>
   <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
   <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+  <a href="/login"><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
 
 {% block conteudo %}
 {% endblock %}
 
 
-<h3>&copy 2019 Paulo Côto</h3>
+<h3>&copy; 2019 Paulo Côto</h3>
 </body>
 </html>
