--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-PT">
 <head>
     <meta charset="UTF-8">
-    <title>Escola Secundária de Maximinos</title>
-
-<!-- Load an icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="static/style.css">
+    <link rel="shortcut icon" href="/static/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <title>Loja Online</title>
+    {% block titulo %}
+    {% endblock %}
+    <script type="text/javascript" src="/static/scroll.js"></script>
 </head>
 <body>
 
 <div class="navbar">
-  <a class="active" href="/"><i class="fa fa-fw fa-home"></i> Home</a>
-  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-  <a href="/login"><i class="fa fa-fw fa-user"></i> Login</a>
+    <a class="active" href="/"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+    <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+    <a href="/login"><i class="fa fa-fw fa-lock"></i> Login</a>
+    <a href="/registo"><i class="fa fa-fw fa-user"></i> Registo</a>
 </div>
 
 {% block conteudo %}
