--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,7 @@
     <a class="active" href="/"><i class="fa fa-fw fa-home"></i> Home</a>
     <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
     <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+    <a href="/carrinho"><i class="fas fa-shopping-cart"></i> Carrinho</a>
     <a href="/login"><i class="fa fa-fw fa-lock"></i> Login</a>
     <a href="/registo"><i class="fa fa-fw fa-user"></i> Registo</a>
 </div>
